[package]
name = "pocket_api_client"
version = "0.1.0"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-error = "2.0.0"
tracing = "0.1.25"
cow_arc = "0.2.2"
async-trait = "0.1.48"
serde_json = "1.0.64"
derive_more = "0.99.13"
url = "2.2.1"
serde = {version = "1.0.125", features = ["derive"]}
reqwest = {version = "0.11.2", features = ["json", "rustls-tls"]}

[dev-dependencies]
tokio = {version = "1.4.0", features = ["full"]}
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
dotenv = "0.15.0"
webbrowser = "0.5.5"
warp = "0.3.1"
# actix-web = "4.0.0-beta.5"
# actix-rt = "2.2.0"
